4/1/2016........21:23:55 Compare Text
4/1/2016........21:24:11 Compare Text
5/1/2016........8:4:16 Compare Text
5/1/2016........8:4:21 Compare Text
5/1/2016........8:4:37 Compare Text
=======
>>>>>>> 1c22b08e876c184c1a97c1522947d86f77030a5f
5/1/2016........1:39:55 Compare Text
5/1/2016........1:39:59 Compare Text
<<<<<<< HEAD:2Compare/Data/History.txt
5/1/2016........2:13:39 Compare Text
5/1/2016........2:17:20 Compare Text
5/1/2016........2:17:24 Compare Text
5/1/2016........2:17:34 Compare Text
5/1/2016........2:19:23 Compare Text
5/1/2016........2:19:26 Compare Text
5/1/2016........2:19:36 Compare Text
5/1/2016........2:19:44 Compare Text
5/1/2016........2:19:51 Compare Text
5/1/2016........2:20:19 Compare Text
5/1/2016........2:20:23 Compare Text
5/1/2016........2:20:31 Compare Text
5/1/2016........2:21:12 Compare Text
5/1/2016........2:21:19 Compare Text
5/1/2016........2:21:29 Compare Text
5/1/2016........2:21:42 Compare Text
5/1/2016........2:21:50 Compare Text
5/1/2016........2:21:53 Compare Text
5/1/2016........2:21:56 Compare Text
5/1/2016........2:22:0 Compare Text
5/1/2016........2:22:5 Compare Text
5/1/2016........2:22:19 Compare Text
5/1/2016........2:22:23 Compare Text
5/1/2016........2:22:33 Compare Text
5/1/2016........2:22:45 Compare Text
5/1/2016........2:22:53 Compare Text
5/1/2016........2:22:59 Compare Text
5/1/2016........2:23:9 Compare Text
5/1/2016........2:23:21 Compare Text
5/1/2016........2:23:27 Compare Text
5/1/2016........2:23:31 Compare Text
5/1/2016........2:23:37 Compare Text
5/1/2016........2:23:45 Compare Text
5/1/2016........2:23:49 Compare Text
5/1/2016........2:23:55 Compare Text
5/1/2016........2:23:59 Compare Text
5/1/2016........2:24:5 Compare Text
=======
>>>>>>> 26de547b9d460e99b6f75a16cbbc76ec522c2efd
>>>>>>> 23fbe85c8028d4eca2b027bdd69ab79733e25173:2Compare/Datas/History.txt
5/1/2016........12:26:58 Compare Text
5/1/2016........12:27:3 Compare Text
5/1/2016........12:30:36 Compare Text