@@ -158,3 +158,6 @@
 5/1/2016........12:26:58 Compare Text
 5/1/2016........12:27:3 Compare Text
 5/1/2016........12:30:36 Compare Text
+5/1/2016........19:50:50 Compare Text
+5/1/2016........19:51:0 Compare Text
+5/1/2016........19:51:51 Compare Folder
